<package>
  <name>ptp_follow_joint_trajectory_controller</name>
  <version>1.0.0</version>
  <description>ptp_follow_joint_trajectory_controller.</description>
  <maintainer email="mahisorn.w@gmail.com">Mahisorn Wongphati</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/hiveground-ros-package/hiveground_controllers/wiki</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Mahisorn Wongphati</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend> 
  <run_depend>roscpp</run_depend>
  <build_depend>controller_interface</build_depend>
  <run_depend>controller_interface</run_depend>
  <build_depend>realtime_tools</build_depend>
  
  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
  
</package>
